tests/whiley/valid/test_373.wyal
type i8 is (int n)
where:
    (-128 <= n) && (n <= 127)


function g(int x) -> (int r)

define g_ensures_0(int x, int r) is:
    (r > 0) && (r < 125)


assert "type invariant not satisfied":
    forall(int x):
        if:
            g_ensures_0(x, g(x))
        then:
            [g(x)] is i8[]


